--- a/index.html
+++ b/index.html
@@ -1,76 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- Add this to your HTML head section -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlipBook - By Roko Buljan</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="#!" type="image/x-icon">
-</head>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="shortcut icon" href="#!" type="image/x-icon" />
+  </head>
 
-<body>
-
+  <body>
     <div class="book">
-        <div class="page">
-            <div class="front">
-                <h1>FlipBook</h1>
-                <h3>2023.<br>Second edition</h3>
-            </div>
-            <div class="back">
-                <h2>Lorem Ipsum</h2>
-                1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, modi, perspiciatis molestias cum neque
-                delectus eum eveniet repellat iusto totam magnam cupiditate quaerat quis.
-            </div>
+      <div class="page">
+        <div id="pdf-container" class="front">
+          <canvas class="pdf-render"></canvas>
         </div>
-
-        <div class="page">
-            <div class="front">
-                2. Dolor Molestias aspernatur repudiandae sed quos debitis recusandae consectetur ab facilis voluptates
-                sint vero eos, consequuntur delectus?
-            </div>
-            <div class="back">
-                <img src="https://picsum.photos/500/400" alt="Img 1">
-            </div>
+        <div id="pdf-container" class="back">
+          <canvas class="pdf-render"></canvas>
         </div>
-
-        <div class="page">
-            <div class="front">
-                <h2>Sit amet</h2>
-                4. Consectetur adipisicing elit. Dignissimos illo voluptate sapiente provident tempore ea voluptates
-                perferendis tenetur eos nulla, doloribus! Distinctio a nostrum ipsum, adipisci at mollitia.
-            </div>
-            <div class="back">
-                5. Debitis recusandae consectetur ab facilis voluptates sint vero eos, consequuntur delectus temporibus
-                harum dolorem provident eaque perferendis.
-            </div>
-        </div>
-
-        <div class="page">
-            <div class="front">
-                <h2>Consectetur</h2>
-                6. Adipisicing elit. Sed, fuga aspernatur? Numquam, molestias unde! Voluptatibus sint aspernatur qui
-                dolore est itaque ipsum consequuntur neque asperiores non obcaecati harum, perspiciatis voluptate!
-            </div>
-            <div class="back">
-                7. Temporibus, eum nobis? Adipisci, a? Eaque vel amet ut reprehenderit.
-            </div>
-        </div>
-
-        <div class="page">
-            <div class="front">
-                <img src="https://picsum.photos/536/354" alt="Img 2">
-            </div>
-            <div class="back">
-                <h3>Finalis</h3>
-                9. Lorem ipsum dolor sit, amet consectetur adipisicing elit. code by Roko, eniam vero, magni dignissimos
-                deleniti hic ratione sequi ullam eos.
-            </div>
-        </div>
-        
+      </div>
     </div>
 
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
