--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- Add this to your HTML head section -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=1024">
+
     <title>FlipBook - By Roko Buljan</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="#!" type="image/x-icon" />
@@ -21,6 +23,14 @@
           <canvas class="pdf-render"></canvas>
         </div>
       </div>
+    </div>
+    <div class="controlss" style="position: absolute;bottom: 5px;display: flex;width: 100%;justify-content: space-between;">
+        <button onclick="pressArrow('ArrowLeft')">
+            <img src="./backword-arrow.png" alt="" srcset="">
+        </button>
+        <button onclick="pressArrow('ArrowRight')">
+            <img src="./forword-icon.png" alt="" srcset="">
+        </button>
     </div>
 
     <script src="index.js"></script>
