--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=1024">
+    <meta name="viewport" content="width=920">
 
     <title>FlipBook - By Roko Buljan</title>
     <link rel="stylesheet" href="index.css" />
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="controlss" style="position: absolute;bottom: 5px;display: flex;width: 100%;justify-content: space-between;">
+    <div class="controlss" style="position: absolute;bottom: 5px;display: flex;width: 100%;justify-content: space-around;">
         <button onclick="pressArrow('ArrowLeft')">
             <img src="./backword-arrow.png" alt="" srcset="">
         </button>
