--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   </head>
 
   <body>
+    <div class="progress-container" style="margin-top: 30px;">
+        <progress id="pdf-progress" value="0" max="100"></progress>
+        <span id="progress-text">0%</span>
+    </div>
+    <div class="loader" style="height: 50px;"></div>
     <div class="book">
       <div class="page">
         <div id="pdf-container" class="front">
