--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=920">
+    <meta name="viewport" content="width=920, initial-scale=1.0">
 
     <title>FlipBook - By Roko Buljan</title>
     <link rel="stylesheet" href="index.css" />
