--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="viewport" content="width=920, initial-scale=1.0">
 
-    <title>FlipBook - By Roko Buljan</title>
+    <title>Deen e ILaahi Book in 3d flipbook Format</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="shortcut icon" href="#!" type="image/x-icon" />
   </head>
