--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=920, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=800, initial-scale=1.0" > -->
+    <meta name="viewport" content="width=400, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 
     <title>Deen e ILaahi Book in 3d flipbook Format</title>
     <link rel="stylesheet" href="index.css" />
